--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html ng-app="myApp">
 <head>
-	<base href="test-static/">
+	<!-- <base href="test-static/"> -->
 	<meta charset="utf-8">
 	<title>Blank</title>
 	<meta name="description" content="">
