--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 	<!--[if lt IE 10]>
 		<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 	<![endif]-->
-	This is an test from prose.io
+	<h2>This is an test from prose.io</h2>
 
 	<!-- build:js(src) scripts/vendor.js -->
 	<!-- bower:js -->
@@ -32,14 +32,9 @@
 	<!-- endbower -->
 	<!-- endbuild -->
 
-	<!-- build:js({.tmp/serve,.tmp/partials}) scripts/app.js -->
+	<!-- build:js({.tmp/serve}) scripts/app.js -->
 	<!-- inject:js -->
 	<!-- js files will be automatically insert here -->
 	<!-- endinject -->
-
-	<!-- inject:partials -->
-	<!-- angular templates will be automatically converted in js and inserted here -->
-	<!-- endinject -->
-	<!-- endbuild -->
 </body>
 </html>
