--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
 	<!-- endbower -->
 	<!-- endbuild -->
 
-	<!-- build:js({.tmp/serve}) scripts/app.js -->
+	<!-- build:js({.tmp/serve,.tmp/partials}) scripts/app.js -->
 	<!-- inject:js -->
 	<!-- js files will be automatically insert here -->
 	<!-- endinject -->
